--- a/FL12_HW2/homework/css/style.css
+++ b/FL12_HW2/homework/css/style.css
@@ -4,121 +4,200 @@ write your code here
 
 */
 .tm-team-description-container {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 .tm-main-nav ul li:hover {
-    background-color: lightskyblue;
-    color: #fff;
+  background-color: lightskyblue;
+  color: #fff;
 }
 
 .tm-main-nav {
-    box-shadow: 1px 7px 8px 1px rgba(61, 55, 61, 0.7);
+  box-shadow: 1px 7px 8px 1px rgba(61, 55, 61, 0.7);
 }
 
 section {
-    box-shadow: 1px 7px 8px 1px rgba(61, 55, 61, 0.7);
-    position: relative;
+  box-shadow: 1px 7px 8px 1px rgba(61, 55, 61, 0.7);
+  position: relative;
 }
 
 section::before {
-    content: '';
+  content: "";
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 40px 40px 0 0;
+  border-color: #2fc356 transparent transparent transparent;
+  left: 0;
+  top: 0;
+  position: absolute;
+}
+
+ol li {
+  list-style: lower-alpha;
+}
+
+#home {
+  background-image: linear-gradient(lightskyblue, burlywood);
+}
+
+.tm-banner-inner {
+  background-color: #fff;
+}
+
+.tm-banner-text {
+  text-shadow: 2px 2px #333;
+  animation: moveText 2s infinite;
+}
+
+@keyframes moveText {
+  from {
+    margin: 0 -200px 0 0;
+  }
+  to {
+    margin: 0;
+  }
+}
+
+.flex-2-col {
+  display: flex;
+}
+
+.tm-team-description-container {
+  text-align: center;
+}
+
+li.box-bg:hover {
+  background-color: darkgrey;
+}
+
+.tm-section-title {
+  text-align: center;
+}
+
+ol li a:hover::before {
+  content: ">";
+}
+
+li a.text::after {
+  content: "new";
+  color: red;
+  font-size: 12px;
+  vertical-align: super;
+  font-weight: bold;
+}
+
+.blocks > div > p:last-child {
+  letter-spacing: 5px;
+  word-spacing: 10px;
+}
+
+.blocks > div:first-child > h2,
+p {
+  text-align: left;
+}
+
+.box-work {
+  padding: 5px;
+}
+
+li.box-work:nth-child(odd) {
+  background-color: lightskyblue;
+  color: white;
+}
+
+.box-work p::first-letter {
+  font-weight: bold;
+}
+
+.tm-section-description {
+  text-align: center;
+  text-indent: 25px;
+  line-height: 30px;
+}
+
+form input:focus {
+  background-color: lightskyblue;
+  color: #fff;
+}
+
+#contact_message {
+  background: url("../img/email-icon.png") right 1% bottom 5% no-repeat;
+  background-size: 30px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+}
+
+@media print {
+  * {
+    margin: 0;
+  }
+  .tm-team-img {
+    display: none;
+  }
+
+  .tm-sidebar {
+    display: none;
+  }
+
+  #about {
+    display: none;
+  }
+
+  ol li {
+    list-style: none;
+    display: block;
+  }
+
+  li a.text::after {
+    content: "";
+  }
+
+  ol {
+    display: flex;
+    flex-direction: column;
+    max-width: 50%;
+    margin: 0 auto;
+  }
+
+  ol li:nth-child(odd) {
+    align-self: flex-end;
+  }
+
+  ol li:nth-child(even) {
+    align-self: flex-start;
+  }
+
+  section::before {
+    content: "";
     width: 0;
     height: 0;
     border-style: solid;
     border-width: 40px 40px 0 0;
-    border-color: #2fc356 transparent transparent transparent;
+    border-color: transparent transparent transparent transparent;
     left: 0;
     top: 0;
     position: absolute;
-}
+  }
 
-ol li {
-    list-style: lower-alpha;
-}
+  .gallery-container {
+    display: none;
+  }
 
-#home {
-    background-image: linear-gradient(lightskyblue, burlywood);
-}
+  .carousel-indicators {
+    display: none;
+  }
 
-.tm-banner-inner {
-    background-color: #fff;
-}
-
-.tm-banner-text {
-    text-shadow: 2px 2px #333;
-    animation: moveText 2s infinite;
-}
-
-@keyframes moveText {
-    from {margin: 0 -200px 0 0;}
-    to {margin: 0;}
-}
-
-.flex-2-col {
-    display: flex;
-}
-
-.tm-team-description-container {
+  .tm-banner-text {
     text-align: center;
+  }
+
+  section .img-contact-us {
+    display: none;
+  }
+
+  #contact {
+    display: none;
+  }
 }
 
-li.box-bg:hover {
-    background-color: darkgrey;
-}
-
-.tm-section-title {
-    text-align: center;
-}
-
-ol li a:hover::before {
-    content: ">";
-}
-
-li a.text::after {
-    content: "new";
-    color: red;
-    font-size: 12px;
-    vertical-align: super;
-    font-weight: bold;
-}
-
-.blocks > div > p:last-child {
-    letter-spacing: 5px;
-    word-spacing: 10px;
-}
-
-.blocks > div:first-child > h2, p {
-    text-align: left;
-}
-
-.box-work {
-    padding: 5px;
-}
-
-li.box-work:nth-child(odd) {
-    background-color: lightskyblue;
-    color: white;
-}
-
-.box-work p::first-letter {
-    font-weight: bold;
-}
-
-.tm-section-description {
-    text-align: center;
-    margin: 25px;
-    line-height: 30px;
-}
-
-form input:focus {
-    background-color: lightskyblue;
-    color: #fff;
-}
-
-#contact_message {
-    background: url('../img/email-icon.png') right 1% bottom 5% no-repeat;
-    background-size: 30px;
-    padding-bottom: 10px;
-    padding-right: 10px;
-}
