--- a/FL12_HW3/homework/scss/_main.scss
+++ b/FL12_HW3/homework/scss/_main.scss
@@ -62,7 +62,7 @@ header {
     display: grid;
     line-height: 1.3;
     text-align: center;
-    font-size: 20px;
+    font-size: map-get($font-size, "standart");
 
     span {
       font-size: 10px;
@@ -77,9 +77,17 @@ header {
   font-size: 45px;
   line-height: 1;
   padding: 40px 0;
+  position: relative;
+  z-index: 1;
 
-  span {
+  &::after {
+    content: "";
+    position: absolute;
     background-color: $span;
+    height: 38px;
+    width: 185px;
+    right: 240px;
+    z-index: -1;
   }
 }
 
@@ -109,6 +117,16 @@ a {
   @extend .header_heading;
   text-align: center;
   color: $text;
+
+  &::after {
+    content: "";
+    position: absolute;
+    background-color: $span;
+    height: 38px;
+    width: 203px;
+    right: 267px;
+    z-index: -1;
+  }
 }
 
 .section_card_wrap {
@@ -162,6 +180,15 @@ a {
       font-size: 20px;
       padding: 0;
       color: $text;
+      &::after {
+        content: "";
+        position: absolute;
+        background-color: $span;
+        height: 19px;
+        width: 41px;
+        right: 149px;
+        z-index: -1;
+      }
     }
     .section_banner_text {
       color: $reverseText;
@@ -204,3 +231,4 @@ footer {
 .footer-cr {
   color: $textColor;
 }
+
