--- a/FL12_HW3/homework/scss/_variables1.scss
+++ b/FL12_HW3/homework/scss/_variables1.scss
@@ -12,3 +12,4 @@ $buttonColor: green;
 $buttonHover: chartreuse;
 $gradient: linear-gradient(to right, green, cornflowerblue);
 $span: cornflowerblue;
+$font-size: ("standart": 20px);
