--- a/FL12_HW3/homework/scss/_variables2.scss
+++ b/FL12_HW3/homework/scss/_variables2.scss
@@ -12,3 +12,4 @@ $buttonColor: orange;
 $buttonHover: yellow;
 $gradient: linear-gradient(to right, orange, red);
 $span: red;
+$font-size: ("standart": 20px);
