--- a/FL12_HW3/homework/css/style2.css
+++ b/FL12_HW3/homework/css/style2.css
@@ -52,9 +52,17 @@ header {
   font-weight: bold;
   font-size: 45px;
   line-height: 1;
-  padding: 40px 0; }
-  .header_heading span, .section_text span, .section_banner .section_banner_text_wrap .section_banner_heading span {
-    background-color: red; }
+  padding: 40px 0;
+  position: relative;
+  z-index: 1; }
+  .header_heading::after, .section_text::after, .section_banner .section_banner_text_wrap .section_banner_heading::after {
+    content: "";
+    position: absolute;
+    background-color: red;
+    height: 38px;
+    width: 185px;
+    right: 240px;
+    z-index: -1; }
 
 .header_text {
   color: #fff;
@@ -82,6 +90,14 @@ a {
 .section_text {
   text-align: center;
   color: #fff; }
+  .section_text::after {
+    content: "";
+    position: absolute;
+    background-color: red;
+    height: 38px;
+    width: 203px;
+    right: 267px;
+    z-index: -1; }
 
 .section_card_wrap {
   display: flex;
@@ -127,6 +143,14 @@ a {
       font-size: 20px;
       padding: 0;
       color: #fff; }
+      .section_banner .section_banner_text_wrap .section_banner_heading::after {
+        content: "";
+        position: absolute;
+        background-color: red;
+        height: 19px;
+        width: 41px;
+        right: 149px;
+        z-index: -1; }
     .section_banner .section_banner_text_wrap .section_banner_text {
       color: #000; }
   .section_banner button {
